mali/src/devicedrv/ump/build.log
In file included from ./include/linux/idr.h:16:0,
                 from ./include/linux/kernfs.h:14,
                 from ./include/linux/sysfs.h:16,
                 from ./include/linux/kobject.h:21,
                 from ./include/linux/device.h:17,
                 from ./include/linux/dma-mapping.h:7,
                 from /media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c:20:
/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c: In function ‘os_allocate’:
/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c:136:54: error: ‘__GFP_REPEAT’ undeclared (first use in this function)
    new_page = alloc_page(GFP_HIGHUSER | __GFP_ZERO | __GFP_REPEAT | __GFP_NOWARN);
                                                      ^
./include/linux/gfp.h:515:36: note: in definition of macro ‘alloc_pages’
   alloc_pages_node(numa_node_id(), gfp_mask, order)
                                    ^
/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c:136:15: note: in expansion of macro ‘alloc_page’
    new_page = alloc_page(GFP_HIGHUSER | __GFP_ZERO | __GFP_REPEAT | __GFP_NOWARN);
               ^
/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c:136:54: note: each undeclared identifier is reported only once for each function it appears in
    new_page = alloc_page(GFP_HIGHUSER | __GFP_ZERO | __GFP_REPEAT | __GFP_NOWARN);
                                                      ^
./include/linux/gfp.h:515:36: note: in definition of macro ‘alloc_pages’
   alloc_pages_node(numa_node_id(), gfp_mask, order)
                                    ^
/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.c:136:15: note: in expansion of macro ‘alloc_page’
    new_page = alloc_page(GFP_HIGHUSER | __GFP_ZERO | __GFP_REPEAT | __GFP_NOWARN);
               ^
make[2]: *** [/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump/linux/ump_kernel_memory_backend_os.o] Fehler 1
make[1]: *** [_module_/media/data_ext/bpi-r2-kernel/github/mali/src/devicedrv/ump] Fehler 2
make: *** [all] Fehler 2
